[package]
name = "webservice"
version = "0.1.0"
authors = ["ratosh <ratosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2"
actix-rt = "1"
actix-redis = "0.8.0"
redis-async = "0.6.1"
serde = "1.0.104"
serde_json = "1.0.48"
uuid = { version = "0.8", features = ["serde", "v4"] }